<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">onBeat</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="sign">Sign in</string>
    <string name="log">Log in</string>
    <string name="create">Create account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="onBeat">onBeat</string>

    <color name="gray">#343434</color>
    <color name="blue">#29ACE2</color>
    <color name="white">#FFFFFF</color>

    <string name="title_activity_log_in">LogInActivity</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_activity_music_sheet">MusicSheet</string>
    <string name="title_activity_create_account">CreateAccount</string>
    <string name="title_activity_play">Play</string>

</resources>
