<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/blue"
    tools:context=".MainActivity" >
     <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/create_account"
        android:layout_centerHorizontal="true"       
        android:layout_marginBottom="50dp"
        android:text="@string/onBeat"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="60sp" />

      <Button
          android:id="@+id/create_account"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_centerHorizontal="true"
          android:layout_centerVertical="true"         
          android:layout_alignLeft="@+id/sign_in"
          android:layout_marginBottom="10dp"
          android:background="@drawable/buttonshape"
          android:text="@string/create"
          android:textColor="#000000"
          android:textSize="25sp" 
          android:onClick="createAccount" />
      
       <Button
          android:id="@+id/sign_in"
          android:layout_below="@+id/create_account"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/buttonshape"
          android:onClick="signUserIn"
          android:text="@string/sign"
          android:textSize="25sp" />

       <ImageView
           android:layout_width="50dp"
           android:layout_height="50dp"
           android:layout_alignParentBottom="true"
           android:layout_marginBottom="28dp"
           android:layout_toRightOf="@+id/title"
           android:contentDescription="note"
           android:src="@drawable/note" />

</RelativeLayout>